data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_448.wast
;; 9. **Test with a Fallback From `nop` Affected `br_if`**: Set a condition for `br_if` that depends on recent stack changes and insert a `nop` before the conditional branch. Confirm that the `br_if` executes the anticipated path without the `nop` modifying stack state.

(assert_invalid
  (module
    (func (local i32)
      (i32.const 1)
      (nop)
      (br_if 0 (local.get 0))
    )
  )
  "type mismatch"
)